# Uncluttr

./: .gitignore  .pylintrc  README.md  daemon.py  data.json  doc.latex  pyproject.toml  requirements.txt
.github/workflows/: create_exe.yml
Uncluttr/: main.py
Uncluttr/fileTreatement/: fileTreatement.py
configuration/: conf.ini  document_keywords.json
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html  uncluttr.core.html  uncluttr.daemon.html  uncluttr.file_treatement.html  uncluttr.gui.html  uncluttr.html  uncluttr.ia.html
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  tests.doctree  uncluttr.core.doctree  uncluttr.daemon.doctree  uncluttr.doctree  uncluttr.file_treatement.doctree  uncluttr.gui.doctree  uncluttr.ia.doctree
docs/.doctrees/_autosummary/: uncluttr.core.configuration.doctree  uncluttr.core.main.doctree  uncluttr.daemon.daemon.doctree  uncluttr.file_treatement.character_recognition.doctree  (+5 more)
docs/_autosummary/: uncluttr.core.configuration.html  uncluttr.core.main.html  uncluttr.daemon.daemon.html  uncluttr.file_treatement.character_recognition.html  uncluttr.file_treatement.file_treatement.html  uncluttr.file_treatement.metadata_custom.html  uncluttr.file_treatement.rangement.html  uncluttr.file_treatement.text_preprocessing.html  uncluttr.gui.gui.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt  uncluttr.core.rst.txt  uncluttr.file_treatement.rst.txt  uncluttr.ia.rst.txt  uncluttr.rst.txt
docs/uncluttr/: modules.html  uncluttr.core.html  uncluttr.daemon.html  uncluttr.file_treatement.html  uncluttr.gui.html  uncluttr.html  uncluttr.ia.html
models/: data.json  model_svm.joblib  vectorizer_tfidf.joblib
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
source/: conf.py  index.rst  modules.rst  tests.rst  uncluttr.daemon.rst  uncluttr.gui.rst
source/_autosummary/: uncluttr.core.configuration.rst  uncluttr.file_treatement.character_recognition.rst  uncluttr.file_treatement.text_preprocessing.rst
source/uncluttr/: modules.rst  uncluttr.core.rst  uncluttr.rst
tests/: test_gui.py  test_main.py
uncluttr/: hook-spacy.py
uncluttr/core/: configuration.py  main.py
uncluttr/daemon/: daemon.py
uncluttr/fileTreatement/: fileTreatement.py  rangement.py
uncluttr/file_treatement/: character_recognition.py  file_treatement.py  metadata.py  metadata_custom.py  rangement.py  text_preprocessing.py  training_models.py
uncluttr/gui/: gui.py
uncluttr/ia/: IA_PFE.ipynb  __init__.py  ia_pfe.py
(+31 files in other folders)
