[tool.poetry]
name = "uncluttr"
version = "0.0.1"
description = ""
authors = ["Cérina ALLEK", "Waldeck FELIX <Waldeck.ernst.felix@gmail.com>", "Rafael GONÇALVES", "Alban HOELLINGER", "Baptiste LE SCIELLOUR", "Eva SUPIOT"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
watchdog = "^6.0.0"
requests = "^2.32.3"
numpy = "^2.2.1"
tkinterdnd2 = "^0.4.2"

pymupdf = "^1.25.1"
nltk = "^3.9.1"
spacy = "^3.8.4"
joblib = "^1.4.2"
scikit-learn = "^1.6.1"
pdf2image = "^1.17.0"
transformers = "^4.48.0"
fitz = "^0.0.1.dev2"
easyocr = "^1.7.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
