[tool.poetry]
name = "Uncluttr"
version = "0.0.4"
description = ""
authors = ["Cérina ALLEK", "Waldeck FELIX <Waldeck.ernst.felix@gmail.com>", "Rafael GONÇALVES", "Alban HOELLINGER", "Baptiste LE SCIELLOUR", "Eva SUPIOT"]
readme = "README.md"

[tool.poetry.dependencies]

# GUI
tkinterdnd2 = "^0.4.2"

# Backends
numpy = "^2.2.1"
watchdog = "^6.0.0"
requests = "^2.32.3"
python = ">=3.12,<3.13"

# IA
nltk = "^3.9.1"
spacy = "^3.8.4"
joblib = "^1.4.2"
easyocr = "^1.7.2"
pymupdf = "^1.25.2"
fitz = "^0.0.1.dev2"
pdf2image = "^1.17.0"
scikit-learn = "^1.6.1"
transformers = "^4.48.0"
fr_core_news_sm={url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0.tar.gz"}

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
